# ContextPacker

./: .env.example  .gitignore  LICENSE  Makefile  README.md  context.pack.json  pyproject.toml
.github/workflows/: ci.yml  publish-extension.yml  publish-pypi.yml  publish.yml
contextcraft/: __init__.py  cli.py  config.py  constants.py  formatter.py  scanner.py  synthesizer.py
contextcraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
contextcraft/analyzer/: __init__.py  ast_parser.py  dependency_graph.py  git_analyzer.py  pattern_detector.py
tests/: test_analyzers.py  test_cli_diff.py  test_cli_update.py  test_config.py  test_formatter.py  test_git_analyzer.py  test_go_rust.py  test_scanner.py
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: config.ts  extension.ts  panel.ts  runner.ts
website/: index.css  index.html  script.js
