[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "contextcraft"
version = "0.1.0"
description = "Generate structured Context Packs for AI coding tools by analyzing your codebase."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "context", "llm", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
authors = [{ name = "ContextCraft" }]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "anthropic>=0.18.0",
    "gitpython>=3.1.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "pathspec>=0.12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://abhiramvishal.github.io/ContextPacker"
Repository = "https://github.com/abhiramvishal/ContextPacker"
"Bug Tracker" = "https://github.com/abhiramvishal/ContextPacker/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
contextcraft = "contextcraft.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["contextcraft*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
